namespace RackOfLabs.Domain.Enums;

public enum DeviceMachineState
{
    Free,
    Provisioning,
    Erasing,
    Running
}