namespace RackOfLabs.Domain.Enums;

public enum DevicePowerState
{
    PowerOn,
    PowerOff,
    PoweringOn,
    PoweringOff
}